--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div>
       By Friday of the week before your crit, you must:
       <ol>
-        <li>Turn in completed copy of <a href=''>crit form</a> to me via <a href='mailto:lmccart@ucla.edu'>email</a> or mailbox</li>
+        <li>Turn in completed copy of <a href='#'>crit form</a> to me via <a href='mailto:lmccart@ucla.edu'>email</a> or mailbox</li>
         <li>Send any class prep materials to the <a href='mailto:dma403@googlegroups.com'>group mailing list</a></li>
       </ol>
       Missing this deadline may result in cancellation of your crit!
@@ -113,7 +113,7 @@
     <h2>Resources</h2>
     <div>
       <ul>
-        <li><a href=''>crit form</a></li>
+        <li><a href='#'>crit form</a></li>
         <li><a href='https://laurenmccarthy.youcanbook.me/'>lauren office hours</a></li>
         <li><a href='https://groups.google.com/forum/#!forum/dma403'>google group</a></li>
       </ul>
