--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </ul>
       <br>
       <ul>
-        <li>Judith Leemann, <a href='http://static1.1.sqspcdn.com/static/f/131936/27297882/1476969700447/Observations+on+forms+and+patterns+of+critique.pdf?token=rj8akPno5xOkRvwjJmX%2BMxFxZ7g%3D'>Observations on forms and patterns of critique</a></li>
+        <li>Judith Leemann, <a href='Observations+on+forms+and+patterns+of+critique.pdf'>Observations on forms and patterns of critique</a></li>
       </ul>
     </div>
   </section>
