--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
       width: 100%;
       text-align: center;
       color: #c3c3c3;
-      position: absolute;
-      left: 0;
-      bottom: 2em;
+      margin-top: 1em;
     }
   </style>
 </head>
@@ -94,14 +92,18 @@
   <section id='left'>
     <h2>Info</h2>
     <div>
-      By Friday of the week before your crit, you must:
+      By Friday of the week before your crit, you must send to the <a href='mailto:dma403@googlegroups.com'>group mailing list</a>:
       <ol>
-        <li>Turn in completed copy of <a href='#'>crit form</a> to me via <a href='mailto:lmccart@ucla.edu'>email</a> or mailbox</li>
-        <li>Send any class prep materials to the <a href='mailto:dma403@googlegroups.com'>group mailing list</a></li>
+        <li>a completed copy of the <a href='crit-form.pdf'>crit form</a> </li>
+        <li>any prep materials identified in the crit form</li>
       </ol>
       Missing this deadline may result in cancellation of your crit!
       <p>
         The grad gallery and EDA space are reserved for your use on the day of your crit. Installation or deinstallation outside of this date must be coordinated with EDA staff, and may or may not be possible.
+      </p>
+
+      <p>
+        You may invite guest critics to your review. You should make them aware that they will only be present for your review (not the other ones on the same day) unless agreed upon by the other students sharing your day. You should send them a copy of the crit form and materials as well.
       </p>
 
       <p>
@@ -113,7 +115,7 @@
     <h2>Resources</h2>
     <div>
       <ul>
-        <li><a href='#'>crit form</a></li>
+        <li><a href='crit-form.pdf'>crit form</a></li>
         <li><a href='https://laurenmccarthy.youcanbook.me/'>lauren office hours</a></li>
         <li><a href='https://groups.google.com/forum/#!forum/dma403'>google group</a></li>
       </ul>
@@ -128,11 +130,11 @@
     <div class='half'>
     <table>
       <tr>
-        <td>9/27</td>
+        <td><a href='Observations+on+forms+and+patterns+of+critique.pdf'>9/27</a></td>
         <td>Introduction</td>
       </tr>
       <tr>
-        <td>10/4</td>
+        <td><a href=''>10/4</a></td>
         <td><ul><li>Review 1</li><li>Review 2</li></ul></td>
       </tr>
       <tr>
@@ -186,6 +188,6 @@
     </table>
   </div>
   </section>
-  <footer>Lauren McCarthy / Wednesdays 5-7:50pm / Broad 1250 (EDA)</footer>
+  <footer><a href='mailto:lmccart@ucla.edu'>Lauren McCarthy</a> / Wednesdays 5:15-8pm / Broad 1250 (EDA)</footer>
 </body>
 </html>
