--- a/index.html
+++ b/index.html
@@ -92,12 +92,18 @@
   <section id='left'>
     <h2>Info</h2>
     <div>
-      By Friday of the week before your crit, you must send to the <a href='mailto:dma403@googlegroups.com'>group mailing list</a>:
+
+      <p>Each person will have one hour-long crit of <i>finished work</i> during the quarter.</p>
+
+      <p>
+      By Friday of the week before your crit, you must send the following to the <a href='mailto:dma403@googlegroups.com'>group mailing list</a>. 
+      Missing this deadline may result in cancellation of your crit!
       <ol>
         <li>a completed copy of the <a href='crit-form.pdf'>crit form</a> </li>
         <li>any prep materials identified in the crit form</li>
       </ol>
-      Missing this deadline may result in cancellation of your crit!
+    </p>
+    
       <p>
         The grad gallery and EDA space are reserved for your use on the day of your crit. Installation or deinstallation outside of this date must be coordinated with EDA staff, and may or may not be possible.
       </p>
