--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <li>any prep materials identified in the crit form</li>
       </ol>
     </p>
-    
+
       <p>
         The grad gallery and EDA space are reserved for your use on the day of your crit. Installation or deinstallation outside of this date must be coordinated with EDA staff, and may or may not be possible.
       </p>
@@ -112,9 +112,6 @@
         You may invite guest critics to your review. You should make them aware that they will only be present for your review (not the other ones on the same day) unless agreed upon by the other students sharing your day. You should send them a copy of the crit form and materials as well.
       </p>
 
-      <p>
-        The crit group agreements are <a href='https://docs.google.com/document/d/1C3XE2YO-XLQh-vSTP-Y-rYlz22RAfNZ3vof3Mrd0kV8/edit'>here</a>. 
-      </p>
     </div>
 
     <div class='spacer'></div>
@@ -141,23 +138,23 @@
       </tr>
       <tr>
         <td><a href=''>10/4</a></td>
-        <td><ul><li>Review 1</li><li>Review 2</li></ul></td>
+        <td>Off</td>
       </tr>
       <tr>
         <td>10/11</td>
-        <td><ul><li>Review 3</li><li>Review 4</li></ul></td>
+        <td>Off</td>
       </tr>
       <tr>
         <td>10/18</td>
-        <td><ul><li>Review 5</li><li>Review 6</li></ul></td>
+        <td>Off (1st years help 2nd years install)</td>
       </tr>
       <tr>
         <td>10/23</td>
-        <td><ul><li>Review 7</li><li>Review 8</li><li>Review 9</li></ul></td>
+        <td><ul><li>Tuang</li><li>Stalgia</li><li>Christina Y</li></ul></td>
       </tr>
       <tr>
         <td>10/24</td>
-        <td><ul><li>Review 10</li><li>Review 11</li><li>Review 12</li></ul></td>
+        <td><ul><li>Jonathan</li><li>Eli</li><li>Megna</li></ul></td>
       </tr>
     </table>
   </div>
@@ -165,15 +162,15 @@
     <table>
       <tr>
         <td>10/25</td>
-        <td><ul><li>Review 13</li><li>Review 14</li><li>Review 15</li></ul></td>
+        <td><ul><li>Jack</li><li>Sarah B</li></ul></td>
       </tr>
       <tr>
         <td>11/1</td>
-        <td><ul><li>Review 16</li><li>Review 17</li></ul></td>
+        <td><ul><li>Kristin / Eric</li><li>Alice / Kit</li></ul></td>
       </tr>
       <tr>
         <td>11/8</td>
-        <td><ul><li>Review 18</li><li>Review 19</li></ul></td>
+        <td><ul><li>Sam</li><li>Julian</li></ul></td>
       </tr>
       <tr>
         <td>11/15</td>
@@ -181,15 +178,15 @@
       </tr>
       <tr>
         <td>11/22</td>
-        <td><ul><li>Review 20</li><li>Review 21</li></ul></td>
+        <td><ul><li>Sara D / Paul</li><li>Isabelle</li></ul></td>
       </tr>
       <tr>
         <td>11/29</td>
-        <td><ul><li>Review 22</li><li>Review 23</li></ul></td>
+        <td><ul><li>Christina</li><li>Carlos</li><li>Hye Min</li></ul></td>
       </tr>
       <tr>
         <td>12/6</td>
-        <td><ul><li>Review 24</li><li>Review 25</li></ul></td>
+        <td><ul><li>Maru</li><li>Lena</li></ul></td>
       </tr>
     </table>
   </div>
