--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </tr>
       <tr>
         <td>10/18</td>
-        <td>Off (1st years help 2nd years install)</td>
+        <td>Off&nbsp;&nbsp;(help install)</td>
       </tr>
       <tr>
         <td>10/23</td>
@@ -156,14 +156,14 @@
         <td>10/24</td>
         <td><ul><li>Jonathan</li><li>Eli</li><li>Megna</li></ul></td>
       </tr>
-    </table>
-  </div>
-  <div class='half'>
-    <table>
       <tr>
         <td>10/25</td>
         <td><ul><li>Jack</li><li>Sarah B</li></ul></td>
       </tr>
+    </table>
+  </div>
+  <div class='half'>
+    <table>
       <tr>
         <td>11/1</td>
         <td><ul><li>Kristin / Eric</li><li>Alice / Kit</li></ul></td>
