--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <h2>Info</h2>
     <div>
 
-      <p>Each person will have one hour-long crit of <i>finished work</i> during the quarter.</p>
+      <p>Each person will have one roughly hour-long crit of <i>finished work</i> during the quarter.</p>
 
       <p>
       By Friday of the week before your crit, you must send the following to the <a href='mailto:dma403@googlegroups.com'>group mailing list</a>. 
