--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       </tr>
       <tr>
         <td>11/29</td>
-        <td><ul><li>Christina</li><li>Carlos</li><li>Hye Min</li></ul></td>
+        <td><ul><li>Christina C</li><li>Carlos</li><li>Hye Min</li></ul></td>
       </tr>
       <tr>
         <td>12/6</td>
