--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
       vertical-align:top;
     }
     td {
-      padding-bottom: 1.5em;
+      padding-bottom: 2em;
     }
     td:nth-child(2) {
       padding-left: 2em;
     }
     ul {
       margin: 0;
-      padding-left: 1em;
+      padding-left: 0;
+      list-style: none;
     }
     li {
       margin: 0;
@@ -74,6 +75,10 @@
     .spacer {
       height: 0.25em;
       margin: 0;
+    }
+
+    .special {
+      color: #ff8100;
     }
 
     footer {
@@ -160,6 +165,10 @@
         <td>10/25</td>
         <td><ul><li>Jack</li><li>Sarah B</li></ul></td>
       </tr>
+      <tr class='special'>
+        <td>10/27</td>
+        <td>Gallery visits</td>
+      </tr>
     </table>
   </div>
   <div class='half'>
@@ -175,6 +184,10 @@
       <tr>
         <td>11/15</td>
         <td>Off</td>
+      </tr>
+      <tr class='special'>
+        <td>11/18</td>
+        <td>Gallery visits</td>
       </tr>
       <tr>
         <td>11/22</td>
