--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       </tr>
       <tr>
         <td>11/22</td>
-        <td><ul><li>Sara D / Paul</li><li>Isabelle</li></ul></td>
+        <td><ul><li>Paul</li><li>Isabelle</li></ul></td>
       </tr>
       <tr>
         <td>11/29</td>
@@ -199,7 +199,7 @@
       </tr>
       <tr>
         <td>12/6</td>
-        <td><ul><li>Maru</li><li>Lena</li></ul></td>
+        <td><ul><li>Maru</li><li>Sara D</li><li>Lena</li></ul></td>
       </tr>
     </table>
   </div>
