--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       </tr>
       <tr>
         <td>10/24</td>
-        <td><ul><li>Jonathan</li><li>Eli</li><li>Megna</li></ul></td>
+        <td><ul><li>Jonathan</li><li>Eli</li><li>Mengna</li></ul></td>
       </tr>
       <tr>
         <td>10/25</td>
