--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <p>Each person will have one roughly hour-long crit of <i>finished work</i> during the quarter. We will begin <b>promptly at 5:15pm</b>.</p>
 
       <p>
-      By Friday of the week before your crit, you must send the following to <a href='mailto:lmccart@ucla.edu'>lmccart@ucla.edu</a>.<!-- the <a href='mailto:dma403@googlegroups.com'>group mailing list</a> -->. 
+      By Friday of the week before your crit, you must send the following to <a href='mailto:lmccart@ucla.edu'>lmccart@ucla.edu</a><!-- the <a href='mailto:dma403@googlegroups.com'>group mailing list</a> -->. 
       Missing this deadline may result in cancellation of your crit!
       <ol>
         <li>a completed copy of the <a href='crit-form2.pdf'>crit form</a> </li>
