--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <p>
       By Friday of the week before your crit, you must send the following to <a href='mailto:lmccart@ucla.edu'>lmccart@ucla.edu</a><!-- the <a href='mailto:dma403@googlegroups.com'>group mailing list</a> -->. 
-      Missing this deadline may result in cancellation of your crit!
+      Missing this deadline will result in cancellation of your crit!
       <ol>
         <li>a completed copy of the <a href='crit-form2.pdf'>crit form</a> </li>
         <li>any prep materials identified in the crit form</li>
