--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       By Friday of the week before your crit, you must send the following to <a href='mailto:lmccart@ucla.edu'>lmccart@ucla.edu</a><!-- the <a href='mailto:dma403@googlegroups.com'>group mailing list</a> -->. 
       Missing this deadline will result in cancellation of your crit!
       <ol>
-        <li>a completed copy of the <a href='crit-form2.pdf'>crit form</a> </li>
+        <li>a completed copy of the <a href='crit-form.pdf'>crit form</a> </li>
         <li>any prep materials identified in the crit form</li>
       </ol>
     </p>
@@ -123,7 +123,7 @@
     <h2>Resources</h2>
     <div>
       <ul>
-        <li><a href='crit-form2.pdf'>crit form</a></li>
+        <li><a href='crit-form.pdf'>crit form</a></li>
         <li><a href='https://laurenmccarthy.youcanbook.me/'>lauren office hours</a></li>
         <li><a href='https://groups.google.com/forum/#!forum/dma403'>google group</a></li>
       </ul>
