--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
       </tr>
       <tr>
         <td>10/24</td>
-        <td><ul><li>Jonathan</li><li>Eli</li><li>Mengna</li></ul></td>
+        <td><ul><li>Jonathan</li><li>Eli</li></ul></td>
       </tr>
       <tr>
         <td>10/25</td>
-        <td><ul><li>Jack</li><li>Sarah B</li></ul></td>
+        <td><ul><li>Jack</li><li>Sarah B</li><li>Mengna</li></ul></td>
       </tr>
       <tr class='special'>
         <td>10/27</td>
