--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <div>
       <ul>
         <li><a href='crit-form.pdf'>crit form</a></li>
-        <li><a href='https://laurenmccarthy.youcanbook.me/'>lauren office hours</a></li>
-        <li><a href='https://groups.google.com/forum/#!forum/dma403'>google group</a></li>
+        <li><a href='https://support.dma.ucla.edu/eda/'>EDA info and proposal form</a></li>
+        <li><a href='https://calendar.google.com/calendar/selfsched?sstoken=UUFLVGpxMk1pN0hyfGRlZmF1bHR8MTU5MjM4NWEwMjQwYjY1YmU0OGVkZDAxNjRkMTc5MzE'>lauren office hours</a></li>
       </ul>
       <br>
       <ul>
